# addrinfo

./: .gitignore  README.md  addrinfo.sln  addrinfo.vcxproj  addrinfo.vcxproj.filters  configure.ac
addrinfo/x64/Debug/: addrinfo.exe.recipe  addrinfo.ilk  vc143.idb
addrinfo/x64/Debug/addrinfo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  addrinfo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: Makefile.am  Makefile.in  addrinfo.c  addrinfo.h  addrinfo2.c  config.h.in
